<resources>
    <string name="app_name">vynl</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register for vynl today!</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_market">Marketplace</string>
    <string name="btn_userlist">My List</string>
    <string name="btn_vinyllist">All Vinyl</string>
    <string name="forgot_password_msg">We just need your registered Email address to start the recovery.</string>
    <string name="prompt_password">Enter Password.</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_vinyl_list">VinylListActivity</string>
    <string name="title_activity_vinyl_adapter">VinylAdapter</string>
    <string name="title_activity_try_list">TryList</string>
    <string name="title_activity_add_vinyl">AddVinylActivity</string>
    <string name="vinyl_name">Enter Vinyl Name...</string>
    <string name="artist_name">Enter Artist Name...</string>
    <string name="details_label">Market Information</string>
    <string name="title_activity_add_vinyl_user">AddVinylUserActivity</string>
    <string name="title_activity_all_vinyl">AllVinylActivity</string>
    <string name="title_activity_view_vinyl">ViewVinylActivity</string>
    <string name="btn_add_to_market">Add to Market!</string>
</resources>
