<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".LoginActivity">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:descendantFocusability="beforeDescendants"
                      android:focusableInTouchMode="true"
                      android:background="@color/colorPrimary"
                      android:orientation="vertical">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Vinyl Information"
                        style="?android:listSeparatorTextViewStyle" />
                <EditText
                        android:id="@+id/vinyl_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:hint="@string/artist_name" />
                <EditText
                        android:id="@+id/vinyl_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:hint="@string/vinyl_name" />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_label"
                        android:textColor="@color/white"
                        style="?android:listSeparatorTextViewStyle" />
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:hint="Phone Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:id="@+id/phone_number"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:hint="Asking Price"
                        android:inputType="numberDecimal"
                        android:id="@+id/price"/>

        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>